--- a/src/style.css
+++ b/src/style.css
@@ -116,7 +116,7 @@ a:hover {
 .content {
   padding-left: 2.5rem;
   width: 60%;
-  min-height: 90vh;
+  min-height: 100vh;
 }
 
 .twitter-style-border {
